--- a/README
+++ b/README
@@ -2,7 +2,7 @@ Title: Eye Exercise Repository
 
 Description: This repository offers a variety of exercises aimed at enhancing eye health and reducing strain caused by extended screen time.
 
-How to Run: Clone the repository to your local machine, navigate to the desired exercise file, and follow the provided instructions.
+How to Run: Clone the repository to your local machine, run index.html, move the cursor of the mouse or touch pad.
 
 Roadmap of Future Improvements:
 
