--- a/README
+++ b/README
@@ -1,14 +1,20 @@
-Title: Eye Exercise Repository
+# EyeExercise
 
-Description: This repository offers a variety of exercises aimed at enhancing eye health and reducing strain caused by extended screen time.
+## Description
 
-How to Run: Clone the repository to your local machine, run index.html, move the cursor of the mouse or touch pad.
+EyeExercise is an interactive web experiment that demonstrates the capability of CSS and JavaScript to create engaging user experiences. This project features a pair of eyes that follow the user's mouse cursor, creating a visually captivating effect on the screen.
 
-Roadmap of Future Improvements:
+## How to Run
 
-    Expand exercise collection to include diverse techniques.
-    Incorporate visual aids or videos for better understanding.
-    Provide recommendations for integrating exercises into daily routines.
-    Offer tips for overall eye health maintenance.
+To experience EyeExercise, simply open the `index.html` file in a web browser. As you move your mouse cursor across the screen, the eyes will follow its movement, giving the illusion of being watched.
 
-License Information: This project is licensed under the MIT License. See the LICENSE file for details.
+## Roadmap of Future Improvements
+
+- Enhance eye movement animations for a more realistic effect.
+- Add additional elements to create a complete character or scene.
+- Implement user settings to customize eye color, size, or behavior.
+- Optimize code for better performance and compatibility across browsers.
+
+## License Information
+
+This project is licensed under the MIT License. See the LICENSE file for more details.
